# python-dev-template

./: .envrc-sample  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENCE  Makefile  README.md  init_project.sh  pyproject.toml  setup  setup.sh
.github/instructions/: python-copilot.instructions.md
src/: main.py
tests/: test_main.py
