[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "A modern Python project created from the dev template"
readme = "README.md"
requires-python = ">={{PYTHON_VERSION}}"
dependencies = []

[dependency-groups]
dev = ["isort>=6.0.1", "pytest>=8.4.0", "pytest-cov>=6.1.1", "ruff>=0.11.12"]


# TESTING configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]


# RUFF configurations
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py{{PYTHON_VERSION_NODOT}}"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ISORT configurations
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# MYPY configurations
[tool.mypy]
python_version = "{{PYTHON_VERSION}}"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true

# Per-module configuration for external libraries
[[tool.mypy.overrides]]
module = "tests.*"
# Allow less strict typing in tests
disallow_untyped_defs = false
disallow_incomplete_defs = false
